[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explainable-ai-dashboard"
version = "0.1.0"
description = "Flask dashboard for Iris classifier permutation importance"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "XAI Dashboard Contributors" }]
dependencies = [
    "flask>=2.3",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
xai-dashboard = "xai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
